// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Card InlineEntryCard Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
</div>
`;

exports[`renders the component with a dropdown 1`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.25rem 0.75rem;
  min-height: 32px;
  padding-top: 0;
  padding-bottom: 0;
  height: 20px;
  min-height: 20px;
  border: none;
}

.emotion-2 svg {
  fill: currentColor;
}

.emotion-2:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-2:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-2:active,
.emotion-2:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-2:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Card InlineEntryCard my-extra-class Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
  <div
    class="Dropdown emotion-3"
    data-test-id="cf-ui-card-actions"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="InlineEntryCard__actions emotion-2"
      data-node-id="dropdown-trigger-61728000"
      data-test-id="cf-ui-button"
      type="button"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-label="Actions"
          class="emotion-0"
          data-test-id="cf-ui-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Card InlineEntryCard my-extra-class Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
</div>
`;

exports[`renders the component with published status 1`] = `
<div
  class="Card InlineEntryCard my-extra-class Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator InlineEntryCard__status-indicator--published"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
</div>
`;
